added link to lab website

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@ layout: default
 title: Easton R. White
 ---
 
+<p> This website is not being updated regularly. Please see the new lab website at <a href="https://quantmarineecolab.github.io/">Quantitative Marine Ecology Lab</a>.</p>
+
+
 <p>
 I am a quantitative marine ecologist who uses mathematical and statistical tools, coupled with experiments and field observations, to answer questions in ecology, conservation science, sustainability, and ecosystem management. Most of my work is focused on marine systems, especially fisheries and spatial planning. I am a new Assistant Professor in the Department of Biological Sciences at the <a href="https://colsa.unh.edu/biological-sciences">University of New Hampshire</a>. Prior to joining UNH, I was a research associate at the University of Vermont with the <a href="https://www.uvm.edu/quest/leadership-team">QuEST program</a>, a NSF-funded PhD traineeship focused on quantitative skills, interdisciplinary work, as well as diversity and inclusion.</p>
 
