--- a/join/index.html
+++ b/join/index.html
@@ -3,54 +3,7 @@ layout: default
 title: Easton R. White | Join the Lab
 ---
 
-<h2>JOIN THE LAB</h2>
-
-<p>There are openings for graduate students and postdoctoral fellows within the Quantitative Marine Ecology Lab at the University of New Hampshire working with Professor Easton White.</p>
-
-All lab members must be:
- <ul>
-<li> Decent human beings (we don’t work with jerks) </li>
-<li> Interested in marine systems and using quantitative tools (e.g., mathematical models, statistics, R) </li>
-<li> Wanting to change the world </li>
-  </ul> 
-
-<p>Members of the lab are strongly committed to anti-racist practices, real diversity and inclusion efforts, and moving science beyond the ivory tower.</p>
-
-<h3><i>Graduate students</i></h3>
-<p> I am currently looking to recruit graduate students (to start Fall 2021 or 2022) to work on socio-ecological questions in small-scale tropical fisheries and species monitoring. Experience (and willingness to learn more) with R, quantitative skills (e.g., mathematical modeling, statistics), and field work is needed. A basic understanding of French is also a plus. If you are interested, please send (<a href="mailto:Easton.White@unh.edu">Easton.White@unh.edu</a>) a CV and brief introduction, including details of your prior research experience, as well as your research interests and graduate school goals and how you think these align with my research program. I am also open to chatting about potential projects related to other areas of my research program. For a start date of Fall 2021, I will give priority to applicants who have contacted me before March 1st. </p>
-
-<p>I can accept students through <a href="https://colsa.unh.edu/biological-sciences">UNH's Biological Sciences MS and PhD programs.</a> There are options within these programs in both Integrative and Organismal Biology (IOB) and Marine Biology (MB). The priority deadline for Fall admission is January 15th each year, but applications after this time will be considered. If you are interested in working with me, I strongly recommended that you reach out to me before applying for graduate study. Graduate work is typically funded through a combination of fellowships, research positions, and teaching assistantships. </p>
-
-
-<h3><i>Postdoctoral fellows</i></h3>
-<p>I am looking for postdoctoral fellows to work on questions related to fisheries and disturbances, mathematical modeling of disturbances and socio-environmental systems, improving population monitoring and data collection, sustainable seafood, or synthesizing across socio-environmental fisheries. My background is in quantitative ecology with an emphasis on marine systems. However, my interests are broad and I am happy to discuss other project ideas further. I am also open to collaboratively working on proposals to help fund independent postdoctoral fellow positions through several different programs. </p>
-
- <ul>
-   <li><a href="http://go.uvm.edu/nia9k">Gund postdoctoral fellow program (based at the University of Vermont)</a> - due Nov 11th</li>
-   <li><a href="https://www.nsf.gov/pubs/2021/nsf21538/nsf21538.htm">NSF Ocean Sciences postdoctoral fellow program (based anywhere)</a> - Due Mar 3rd </li>
-   <li><a href="https://us.fulbrightonline.org/">Fulbright program</a> - this is for non-US residents to study and work in the US - due in October each year</li>
-   <li><a href="https://www.hfsp.org/funding/hfsp-funding/postdoctoral-fellowships">Human Frontier Science Program postdoctoral fellowship</a> - intended for interdisiplinary scholars working in the life sciences - due August of each year</li>
-   <li><a href="https://schmidtsciencefellows.org/selection/">Schmidt Science Fellows postdoctoral program</a> </li>
-   <li><a href="https://conbio.org/mini-sites/smith-fellows">Smith Fellowship program</a> - Conservation-focused award due in October each year</li>
-  <li><a href="https://www.jsmf.org/apply/fellowship/">JSMF's Understanding Dynamic and Multi-scale Systems program</a> - Postdoc fellowship due in June each year</li>
-</ul> 
-
-
-
-<p>If you are interested, please send an email and CV to Easton White (<a href="mailto:Easton.White@unh.edu">Easton.White@unh.edu</a>). </p>
-
-
-
-
-<p>One of my main commitments as a faculty member is promoting and supporting diversity, equity, and inclusion in STEM. Please consider applying for a position in my lab if you are a first-generation college student, a student from a low-income background, a member of a racial or ethnic minority group, if you identify as a woman or as LGBTQ+, and/or if you have a disability.</p>
-
-
-
-<h3><i>Other positions at UNH</i></h3>
-<p>Additional staff and faculty positions at UNH are posted to a <a href="https://jobs.usnh.edu/">online job platform.</a> I will highlight here the positions that are most relevant to my department and field.</p>
- <ul>
-   <li><a href="https://jobs.usnh.edu/postings/39712">Technical Education Specialist</a> - position in my department for an individual to coordinate and manage biology teaching labs, especially those related to ecology and evolution. I will be working with this person closly given the courses I teach.</li>
-</ul> 
+This page is no longer being updated. Please see <a href="https://quantmarineecolab.github.io/join/">https://quantmarineecolab.github.io/join/</a>. 
 
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
